{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 1039,
  "lineage": "f36b2859-220a-dc6b-e4de-6446502ce337",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "nberne_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798116457287:internet-gateway/igw-0b79815d900bf1d29",
            "id": "igw-0b79815d900bf1d29",
            "owner_id": "798116457287",
            "tags": {
              "Name": "Testn IGW"
            },
            "tags_all": {
              "Name": "Testn IGW"
            },
            "vpc_id": "vpc-03c4f8f8b6e9a7fae"
          },
          "dependencies": [
            "aws_vpc.nberne"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nberne_vpc_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798116457287:route-table/rtb-07505d3a2d7c96a82",
            "id": "rtb-07505d3a2d7c96a82",
            "owner_id": "798116457287",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private Subnet Route Table."
            },
            "tags_all": {
              "Name": "Private Subnet Route Table."
            },
            "timeouts": null,
            "vpc_id": "vpc-03c4f8f8b6e9a7fae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.nberne"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nberne_vpc_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798116457287:route-table/rtb-036d2b4be4aaba169",
            "id": "rtb-036d2b4be4aaba169",
            "owner_id": "798116457287",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b79815d900bf1d29",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet Route Table."
            },
            "tags_all": {
              "Name": "Public Subnet Route Table."
            },
            "timeouts": null,
            "vpc_id": "vpc-03c4f8f8b6e9a7fae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.nberne_igw",
            "aws_vpc.nberne"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nberne_vpc_privae_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca5dda02a153f630",
            "route_table_id": "rtb-07505d3a2d7c96a82",
            "subnet_id": "subnet-0d701b6a0c2987dbb"
          },
          "dependencies": [
            "aws_route_table.nberne_vpc_private_route_table",
            "aws_subnet.private",
            "aws_vpc.nberne"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nberne_vpc_public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e3cea829c264af4",
            "route_table_id": "rtb-036d2b4be4aaba169",
            "subnet_id": "subnet-0d6738fd4e9cbac9d"
          },
          "dependencies": [
            "aws_internet_gateway.nberne_igw",
            "aws_route_table.nberne_vpc_public_route_table",
            "aws_subnet.public",
            "aws_vpc.nberne"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798116457287:security-group/sg-0c0f68b04a298e91e",
            "description": "Allow 22 inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c0f68b04a298e91e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_22",
            "name_prefix": "",
            "owner_id": "798116457287",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_22"
            },
            "tags_all": {
              "Name": "allow_22"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c4f8f8b6e9a7fae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.nberne"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798116457287:security-group/sg-0518fb6bda7e4953e",
            "description": "Allow 80 inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0518fb6bda7e4953e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_80",
            "name_prefix": "",
            "owner_id": "798116457287",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_80"
            },
            "tags_all": {
              "Name": "allow_80"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c4f8f8b6e9a7fae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.nberne"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798116457287:subnet/subnet-0d701b6a0c2987dbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d701b6a0c2987dbb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "798116457287",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet"
            },
            "tags_all": {
              "Name": "Private Subnet"
            },
            "vpc_id": "vpc-03c4f8f8b6e9a7fae"
          },
          "dependencies": [
            "aws_vpc.nberne"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798116457287:subnet/subnet-0d6738fd4e9cbac9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6738fd4e9cbac9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "798116457287",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet"
            },
            "tags_all": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-03c4f8f8b6e9a7fae"
          },
          "dependencies": [
            "aws_vpc.nberne"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nberne",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798116457287:vpc/vpc-03c4f8f8b6e9a7fae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0900daa7df15cbe6c",
            "default_route_table_id": "rtb-059acaa685836ba2a",
            "default_security_group_id": "sg-00b2ab729a02b02f7",
            "dhcp_options_id": "dopt-0c5d280a8ed23f451",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03c4f8f8b6e9a7fae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-059acaa685836ba2a",
            "owner_id": "798116457287",
            "tags": {
              "Name": "nberne"
            },
            "tags_all": {
              "Name": "nberne"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798116457287:vpc-endpoint/vpce-072e883903bbb1ef3",
            "cidr_blocks": [
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21"
            ],
            "id": "vpce-072e883903bbb1ef3",
            "owner_id": "798116457287",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-03c4f8f8b6e9a7fae"
          },
          "dependencies": [
            "aws_vpc.nberne"
          ]
        }
      ]
    }
  ]
}